<resources>
    <string name="app_name">Makharij al-huruf Application</string>
    <string name="info_heading">Information</string>
    <string name="name_heading">Name</string>
    <string name="name_val">Muhammad Afaq Shuaib</string>
    <string name="roll_no_heading">Roll Number</string>
    <string name="roll_no_val">BCSF18M004</string>
    <string name="preview_imgStr">Commits Image Preview</string>
    <string name="githubBtn_text">Go to Github Repo</string>
    <string name="launch_app">Launch App</string>

    <string name="Table_head1">Arabic Letters</string>
    <string name="Table_head_2">Sound Produced From</string>
    <string name="halqiyah_1">أ ہ</string>
    <string name="halqiyah_2">ع ح</string>
    <string name="halqiyah_3">غ خ</string>
    <string name="sound_1">End of Throat</string>
    <string name="sound_2">Middle of Throat</string>
    <string name="sound_3">Start of the Throat</string>
    <string name="lahatiyah_1">ق</string>
    <string name="lahatiyah_2">ک</string>
    <string name="sound_4">Base of Tongue which is near Uvula
        touching the mouth roof</string>
    <string name="sound_5">Portion of Tongue near its base touching the roof of mouth</string>
    <string name="shajariyah_haafiyah_1">ج ش ی</string>
    <string name="sound_6">Tongue touching the center of the mouth roof</string>
    <string name="shajariyah_haafiyah_2">ض</string>
    <string name="sound_7">One side of the tongue touching the molar teeth</string>
    <string name="Tarfiyah_1">ل</string>
    <string name="Tarfiyah_2">ن</string>
    <string name="Tarfiyah_3">ر</string>
    <string name="sound_8">
        Rounded tip of the tongue touching the base of the frontal 8 teeth
    </string>
    <string name="sound_9">Rounded tip of the tongue touching the base of the frontal 6 teeth</string>
    <string name="sound_10">Rounded tip of the tongue and some portion near it touching the base of the frontal 4 teeth</string>

    <string name="Nit_eeyah1">ت د ط</string>
    <string name="sound_11">Tip of the tongue touching the base of the front 2 teeth</string>

    <string name="Lisaveyah_1">ظ ذ ث</string>
    <string name="Lisaveyah_2">ص ز س</string>
    <string name="sound_12">Tip of the tongue touching the tip of the frontal 2 teeth</string>
    <string name="sound_13">Tip of the tongue comes between the front top and bottom teeth</string>

    <string name="Ghunna_1">م ن</string>
    <string name="Ghunna_2">ف</string>
    <string name="Ghunna_3">ب</string>
    <string name="Ghunna_4">م</string>
    <string name="Ghunna_5">و</string>
    <string name="sound_15">Tip of the two upper jaw teeth touches the inner part of the lower lip</string>
    <string name="sound_16">Inner part of the both lips touch each other</string>
    <string name="sound_17">Outer part of both lips touch each other</string>
    <string name="sound_18">Rounding both lips and not closing the mouth</string>
    <string name="Ghunna_6">باَ بوُ بىِ</string>
    <string name="sound_19">Mouth empty space while speaking words like باَ بوُ بىِ</string>

    <string name="sound_14">While pronouncing the ending sound of م or ن , bring the vibration to the nose</string>


</resources>